--- a/D3_CSS/Caen.html
+++ b/D3_CSS/Caen.html
@@ -14,7 +14,7 @@
         <div class="image-container">
         </div>
 
-        <p>Autore: <a href="https://unsplash.com/@robin_inizan">Robin Inizan</a></p>
+        <p>Autore: <a href="https://unsplash.com/@rustx">Rust Kenton</a></p>
 
         <h1>Normandia</h1>
         <h3>Caen</h3>
@@ -33,6 +33,9 @@
             <li><a href="Deauville.html">Deauville</a></li>
         </ul>
     </div>
+    <footer>
+        <a href="index.html">Torna alla home</a>
+    </footer>
 </body>
 
 </html>
