--- a/D3_CSS/Bayeux.html
+++ b/D3_CSS/Bayeux.html
@@ -42,6 +42,8 @@
             <li><a href="Deauville.html">Deauville</a></li>
         </ul>
     </div>
+    <footer>
+        <a href="index.html">Torna alla home</a>
+    </footer>
 </body>
-
 </html>
