--- a/D3_CSS/Rouen.html
+++ b/D3_CSS/Rouen.html
@@ -39,6 +39,9 @@
             <li><a href="Deauville.html">Deauville</a></li>
         </ul>
     </div>
+    <footer>
+        <a href="index.html">Torna alla home</a>
+    </footer>
 </body>
 
 </html>
