--- a/D3_CSS/Bayeux.html
+++ b/D3_CSS/Bayeux.html
@@ -38,7 +38,7 @@
             <li><a href="Bayeux.html">Bayeux</a></li>
             <li><a href="Rouen.html">Rouen</a></li>
             <li><a href="Caen.html">Caen</a></li>
-            <li><a href="Saint-Malo.html">Saint Malo</a></li>
+            <li><a href="Saint-Malo.html">Saint-Malo</a></li>
             <li><a href="Deauville.html">Deauville</a></li>
         </ul>
     </div>
